# damage-report

docs/src/: GameplayLoop.md  Introduction.md  Prototype.md  SUMMARY.md  cleanup-plans.md  code-guidelines.md
docs/src/2d-rendering/: getting-started.md
docs/src/Calcium/: Introduction.md
docs/src/Cobalt/: Introduction.md
docs/src/Milestones/: 00 Prototype.md
docs/src/Trenches/: Goal 1.md  Goal 2.md  Goal 3.md  Introduction.md
docs/src/carpenter/: development.md
game/calcium/: Cargo.toml  Readme.md
game/calcium-apr/: Cargo.toml
game/calcium-game/: Readme.md
game/calcium-rendering/: Cargo.toml
game/calcium-rendering-vulkano/: Cargo.toml
game/calcium-rendering-vulkano-shaders/: Cargo.toml
game/calcium-rendering-vulkano-shaders/src/: gbuffer_frag.glsl  gbuffer_vert.glsl  lib.rs  lighting_frag.glsl
game/calcium-rendering-vulkano/src/: backend.rs  backend_types.rs  factory.rs  frame.rs  lib.rs  render_backend.rs  target.rs  target_swapchain.rs  texture.rs  texture_backend.rs  window.rs
game/calcium-rendering-world3d/: Cargo.toml
game/calcium-rendering-world3d-vulkano/: Cargo.toml
game/calcium-rendering-world3d-vulkano/src/: backend_types.rs  geometry_buffer.rs  geometry_renderer.rs  lib.rs  lighting_renderer.rs  mesh.rs  renderer.rs  world_render_backend.rs
game/calcium-rendering-world3d/src/: backend.rs  backend_types.rs  geometry_buffer.rs  geometry_renderer.rs  lib.rs  lighting_renderer.rs  material.rs  mesh.rs  model.rs  render_world.rs  renderer.rs  world.rs  world_render_system.rs
game/calcium-rendering-world3d/src/vulkano_backend/: mesh.rs  mod.rs  renderer.rs
game/calcium-rendering/src/: backend_types.rs  factory.rs  lib.rs  render_system.rs  target.rs  target_backend.rs  texture.rs
game/calcium-utils/: Cargo.toml
game/calcium/src/: lib.rs  rendering.rs
game/cobalt-apr/: Readme.md
game/cobalt-rendering/: Cargo.toml  build.rs
game/cobalt-rendering-shaders/: Cargo.toml  build.rs
game/cobalt-rendering-vulkano/: Cargo.toml
game/cobalt-rendering-world3d/: Cargo.toml
game/cobalt-rendering-world3d/src/: geometry_buffer.rs  geometry_renderer.rs  lib.rs  lighting_renderer.rs  material.rs  mesh.rs  model.rs  renderer.rs  world.rs
game/cobalt-rendering/src/: backend.rs  error.rs  lib.rs  target.rs  target_swapchain.rs  texture.rs  vulkano_backend.rs  window.rs
game/cobalt-rendering/src/world3d/: camera.rs  material.rs  mesh.rs  mod.rs  model.rs  renderer.rs  shader_frag.glsl  shader_vert.glsl  world.rs
game/cobalt-utils/: Cargo.toml
game/damagereport/: Cargo.toml
game/damagereport/src/: game_world.rs  input.rs  main.rs  player.rs  window.rs
game/trenches/: Cargo.toml
game/trenches/src/: game_world.rs  input.rs  main.rs  player.rs  target.rs  voxel_grid.rs  voxel_system.rs  window.rs
libraries/rendering/calcium-rendering-2d-gfx/: Cargo.toml
libraries/rendering/calcium-rendering-2d-gfx/shaders/: simple2d_150_vert.glsl
libraries/rendering/calcium-rendering-2d-gfx/src/: lib.rs  render_target.rs  renderer.rs
libraries/rendering/calcium-rendering-2d-vulkano/: Cargo.toml
libraries/rendering/calcium-rendering-2d-vulkano/src/: lib.rs  render_target.rs  renderer.rs  vertex.rs
libraries/rendering/calcium-rendering-context/: Cargo.toml
libraries/rendering/calcium-rendering-context/src/: context.rs  gfx_opengl.rs  gfx_opengl_context.rs  lib.rs  runtime.rs  unsupported.rs  vulkano.rs  vulkano_context.rs
libraries/rendering/calcium-rendering-simple2d-gfx/: Cargo.toml
libraries/rendering/calcium-rendering-simple2d-gfx/shaders/: simple2d_150_frag.glsl  simple2d_150_vert.glsl
libraries/rendering/calcium-rendering-simple2d-gfx/src/: lib.rs  render_target.rs  renderer.rs  types.rs
libraries/rendering/calcium-rendering-simple2d-vulkano/: Cargo.toml
libraries/rendering/calcium-rendering-simple2d-vulkano/src/: backend_types.rs  lib.rs  render_target.rs  renderer.rs  types.rs  vertex.rs
libraries/rendering/calcium-rendering-static/: Cargo.toml  Readme.md
libraries/rendering/calcium-rendering-static/src/: gfx_opengl.rs  initializer.rs  lib.rs  rendering.rs  runtime.rs  unsupported.rs  vulkano.rs
libraries/rendering/calcium-rendering-world3d-vulkano/: Cargo.toml
libraries/rendering/calcium-rendering-world3d-vulkano/src/: backend_types.rs  geometry_buffer.rs  geometry_renderer.rs  lib.rs  lighting_renderer.rs  mesh.rs  render_target.rs  renderer.rs  types.rs  world_render_backend.rs  world_renderer.rs
libraries/ui/calcium-conrod/: Cargo.toml
libraries/ui/calcium-conrod/src/: conrod_renderer.rs  lib.rs  line_renderer.rs  text_renderer.rs  util.rs
libraries/ui/calcium-flowy/: Cargo.toml
libraries/ui/calcium-flowy/src/: lib.rs  renderer.rs
libraries/ui/calcium-ui/: Cargo.toml
libraries/ui/calcium-ui/src/: element.rs  lib.rs  renderer.rs  style.rs  ui.rs
libraries/ui/calcium-ui/src/style/: color.rs  cursor.rs  mod.rs  position.rs  size.rs  style.rs
libraries/ui/calcium-ui/src/widget/: button.rs  file_dialog.rs  mod.rs  ribbon.rs
libraries/ui/glyphlayout/: Cargo.toml  README.md
libraries/ui/glyphlayout/src/: lib.rs
projects/carpenter/: Cargo.toml
projects/carpenter-model/: Cargo.toml
projects/carpenter-model/src/: autosave.rs  error.rs  input.rs  input_model.rs  lib.rs  map.rs  map_editor.rs  stbus.rs
projects/carpenter/src/: editor_ui.rs  input_manager.rs  main.rs  runtime.rs  target.rs
projects/carpenter/src/controller/: mod.rs  window.rs
projects/carpenter/src/editor/: mod.rs  ui.rs  viewport.rs  window.rs
projects/carpenter/src/model/: application.rs  autosave.rs  input.rs  map_editor.rs  mod.rs
projects/carpenter/src/view/: mod.rs  ui.rs  viewport.rs  window.rs
projects/damagereport/: Cargo.toml
projects/damagereport/src/: player.rs
projects/rpg-game/: Cargo.toml
projects/rpg-game/assets/: test_map.tmx  test_tiles.tsx  tiles_license.txt
projects/rpg-game/src/: main.rs  runtime.rs
projects/rpg-game/src/model/: map.rs  mod.rs  object.rs  tiles.rs
projects/rpg-game/src/view/: mod.rs
projects/space-game/: .gitignore  Cargo.toml
projects/trenches/: Cargo.toml
(+145 files in other folders)
