[package]
name = "cobalt-rendering"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
cgmath = "0.14.1"
image = "0.13.0"
slog = "2.0.5"
vulkano = {git = "https://github.com/tomaka/vulkano.git"}
vulkano-win = {git = "https://github.com/tomaka/vulkano.git"}
winit = "0.6.4"
