[package]
name = "trenches"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
cgmath = "0.14.1"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-vulkano = {path = "../calcium-rendering-vulkano"}
calcium-rendering-world3d = {path = "../calcium-rendering-world3d"}
calcium-rendering-world3d-vulkano = {path = "../calcium-rendering-world3d-vulkano"}
calcium-utils = {path = "../calcium-utils"}
noise = "0.4.1"
num = "0.1.39"
rayon = "0.7.1"
slog = "2.0.5"
slog-async = "2.0.1"
slog-term = "2.0.1"
vulkano = "0.4.0"
vulkano-win = "0.4.0"
winit = "0.6.4"
