[package]
name = "carpenter-model"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
slog = "2"
pistoncore-input = "0.19"
serde = "1"
serde_derive = "1"
serde_json = "1"
cgmath = { version = "0.15", features = ["serde"] }
#collision = "0.10" TODO: Remove the git dependency when it's on crates.io
collision = {git = "https://github.com/kvark/collision-rs.git"}
