[package]
name = "carpenter"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
calcium-game = {path = "../../libraries/mechanics/calcium-game"}
calcium-rendering = {path = "../../libraries/rendering/calcium-rendering"}
calcium-rendering-simple2d = {path = "../../libraries/rendering/calcium-rendering-simple2d"}
calcium-rendering-world3d = {path = "../../libraries/rendering/calcium-rendering-world3d"}
calcium-rendering-static = {path = "../../libraries/rendering/calcium-rendering-static", features = ["simple2d", "world3d"]}
calcium-flowy = {path = "../../libraries/ui/calcium-flowy"}
flowy = {path = "../../libraries/ui/flowy"}
cgmath = "0.14"
nuklear-rust = "0.3.2"
pistoncore-window = "0.27"
pistoncore-input = "0.18"
slog = "2"
slog-async = "2"
slog-term = "2"
ttf-noto-sans = "0.1.1"
bus = "1.3"
palette = "0.2"
home = "0.3.0"
rusttype = "0.2"

# If you want optimizations in dev while keeping debug symbols, use these
[profile.dev]
opt-level = 1
#opt-level = 2
#opt-level = 3
