[package]
name = "carpenter"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
calcium-game = {path = "../../libraries/mechanics/calcium-game"}
calcium-rendering = {path = "../../libraries/rendering/calcium-rendering"}
calcium-rendering-simple2d = {path = "../../libraries/rendering/calcium-rendering-simple2d"}
calcium-rendering-world3d = {path = "../../libraries/rendering/calcium-rendering-world3d"}
calcium-rendering-static = {path = "../../libraries/rendering/calcium-rendering-static", features = ["simple2d", "world3d"]}
calcium-flowy = {path = "../../libraries/ui/calcium-flowy"}
flowy = {path = "../../libraries/ui/flowy"}
cgmath = "0.15"
pistoncore-window = "0.28"
pistoncore-input = "0.19"
slog = "2"
slog-async = "2"
slog-term = "2"
ttf-noto-sans = "0.1.1"
palette = "0.2"
home = "0.3"
rusttype = "0.2"
#collision = "0.10" TODO: Remove the git dependency when it's on crates.io
collision = {git = "https://github.com/kvark/collision-rs.git"}
carpenter-model = {path = "../carpenter-model"}

# If you want optimizations in dev while keeping debug symbols, use these
[profile.dev]
opt-level = 1
#opt-level = 2
#opt-level = 3
