[package]
name = "damagereport"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
cgmath = "0.15"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-world3d = {path = "../calcium-rendering-world3d"}
calcium-utils = {path = "../calcium-utils"}
slog = "2.0.5"
slog-async = "2.0.1"
slog-term = "2.0.1"
vulkano = "0.4.0"
vulkano-win = "0.4.0"
winit = "0.6.4"
