[package]
name = "rpg-game"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
calcium-game = {path = "../../libraries/mechanics/calcium-game"}
calcium-rendering = {path = "../../libraries/rendering/calcium-rendering"}
calcium-rendering-2d = {path = "../../libraries/rendering/calcium-rendering-2d"}
calcium-rendering-context = {path = "../../libraries/rendering/calcium-rendering-context", features = ["2d"]}
calcium-flowy = {path = "../../libraries/ui/calcium-flowy"}
flowy = {path = "../../libraries/ui/flowy"}
palette = "0.2"
rusttype = "0.2"
ttf-noto-sans = "0.1.1"
cgmath = "0.15"
pistoncore-input = "0.19"
pistoncore-window = "0.29"
slog = "2"
slog-async = "2"
slog-term = "2"
tiled = "0.7"

# If you want optimizations in dev while keeping debug symbols, use these
[profile.dev]
opt-level = 1
#opt-level = 2
#opt-level = 3
