[package]
name = "calcium-rendering-2d-gfx"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
cgmath = "0.15"
gfx = "0.16"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-2d = {path = "../calcium-rendering-2d"}
calcium-rendering-gfx = {path = "../calcium-rendering-gfx"}
