[package]
name = "calcium-rendering-context"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
description = ""
license = "MIT/Apache-2.0"

[features]
# This is supposed to have nothing, do not publish this crate if it has anything
default = ["2d"]
3d = ["calcium-rendering-3d", "calcium-rendering-3d-vulkano"]
2d = ["calcium-rendering-2d", "calcium-rendering-2d-gfx", "calcium-rendering-2d-vulkano"]

[dependencies]
cgmath = "0.15"
slog = "2"
slog-stdlog = "3"
pistoncore-input = "0.19"
pistoncore-window = "0.29"
pistoncore-winit_window = "0.5"
pistoncore-glutin_window = "0.40"
gfx = "0.16"
gfx_window_glutin = "0.17"
gfx_device_gl = "0.14"
vulkano = "0.7"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-gfx = {path = "../calcium-rendering-gfx"}
calcium-rendering-vulkano = {path = "../calcium-rendering-vulkano"}

# Enabled with the world3d feature
calcium-rendering-3d = {path = "../calcium-rendering-3d", optional = true}
calcium-rendering-3d-vulkano = {path = "../calcium-rendering-3d-vulkano", optional = true}

# Enabled with the simple2d feature
calcium-rendering-2d = {path = "../calcium-rendering-2d", optional = true}
calcium-rendering-2d-gfx = {path = "../calcium-rendering-2d-gfx", optional = true}
calcium-rendering-2d-vulkano = {path = "../calcium-rendering-2d-vulkano", optional = true}
