[package]
name = "calcium-rendering-static"
version = "0.0.1"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
description = "The future home of the calcium rendering library"
license = "MIT/Apache-2.0"

[features]
default = []
world3d = ["calcium-rendering-world3d", "calcium-rendering-world3d-vulkano"]

[dependencies]
cgmath = "0.14"
slog = "2"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-vulkano = {path = "../calcium-rendering-vulkano"}
calcium-window = {path = "../../window/calcium-window"}
calcium-window-winit = {path = "../../window/calcium-window-winit"}

# Enabled with the world3d feature
calcium-rendering-world3d = {path = "../calcium-rendering-world3d", optional = true}
calcium-rendering-world3d-vulkano = {path = "../calcium-rendering-world3d-vulkano", optional = true}
