[package]
name = "calcium-rendering-static"
version = "0.0.1"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
description = "The future home of the calcium rendering library"
license = "MIT/Apache-2.0"

[features]
default = ["simple2d", "world3d"]
world3d = ["calcium-rendering-world3d", "calcium-rendering-world3d-vulkano"]
simple2d = ["calcium-rendering-simple2d", "calcium-rendering-simple2d-vulkano"]

[dependencies]
cgmath = "0.14"
slog = "2"
pistoncore-window = "0.27.0"
pistoncore-winit_window = "0.1.0"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-vulkano = {path = "../calcium-rendering-vulkano"}

# Enabled with the world3d feature
calcium-rendering-world3d = {path = "../calcium-rendering-world3d", optional = true}
calcium-rendering-world3d-vulkano = {path = "../calcium-rendering-world3d-vulkano", optional = true}

# Enabled with the simple2d feature
calcium-rendering-simple2d = {path = "../calcium-rendering-simple2d", optional = true}
calcium-rendering-simple2d-vulkano = {path = "../calcium-rendering-simple2d-vulkano", optional = true}
