[package]
name = "calcium-rendering-static"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
description = "The future home of the calcium rendering library"
license = "MIT/Apache-2.0"

[features]
# This is supposed to have nothing, do not publish this crate if it has anything
default = []
world3d = ["calcium-rendering-world3d", "calcium-rendering-world3d-vulkano"]
simple2d = ["calcium-rendering-simple2d", "calcium-rendering-simple2d-gfx", "calcium-rendering-simple2d-vulkano"]

[dependencies]
cgmath = "0.14"
slog = "2"
slog-stdlog = "3"
pistoncore-input = "0.18"
pistoncore-window = "0.27"
pistoncore-winit_window = "0.2.3"
pistoncore-glutin_window = "0.38"
gfx = "0.16"
gfx_window_glutin = "0.17"
gfx_device_gl = "0.14"
calcium-rendering = {path = "../calcium-rendering"}
calcium-rendering-gfx = {path = "../calcium-rendering-gfx"}
calcium-rendering-vulkano = {path = "../calcium-rendering-vulkano"}

# Enabled with the world3d feature
calcium-rendering-world3d = {path = "../calcium-rendering-world3d", optional = true}
calcium-rendering-world3d-vulkano = {path = "../calcium-rendering-world3d-vulkano", optional = true}

# Enabled with the simple2d feature
calcium-rendering-simple2d = {path = "../calcium-rendering-simple2d", optional = true}
calcium-rendering-simple2d-gfx = {path = "../calcium-rendering-simple2d-gfx", optional = true}
calcium-rendering-simple2d-vulkano = {path = "../calcium-rendering-simple2d-vulkano", optional = true}
