[package]
name = "calcium-conrod"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
calcium-rendering = {path = "../../rendering/calcium-rendering"}
calcium-rendering-simple2d = {path = "../../rendering/calcium-rendering-simple2d"}
cgmath = "0.14"
conrod = "0.53"
image = "0.14"
lyon = "0.6"
palette = "0.2"
slog = "2"
