[package]
name = "calcium-conrod"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
calcium-rendering = {path = "../../rendering/calcium-rendering"}
calcium-rendering-2d = {path = "../../rendering/calcium-rendering-2d"}
cgmath = "0.15"
conrod = "0.54"
image = "0.14"
palette = "0.2"
slog = "2"
