[package]
name = "calcium-flowy"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
calcium-rendering = {path = "../../rendering/calcium-rendering"}
calcium-rendering-simple2d = {path = "../../rendering/calcium-rendering-simple2d"}
flowy = {path = "../flowy"}
image = "0.14"
rusttype = "0.2"
cgmath = "0.14"
